# GhostMirror

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.3.md  SECURITY.md  _lab_validate.py  acceptance_test.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
config/: default.yaml
docs/: API_SECURITY_INTELLIGENCE.md  ATTACK_CHAIN_INTELLIGENCE.md  BUG_BOUNTY_MODE.md  HACKERONE_STYLE_REPORTING.md  LAB_MODE.md  PAYLOAD_ENGINE_SAFETY.md  PENTESTER_ASSISTANT_ENGINE.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SPRINTS.md  USAGE.md  ZERO_DAY_HYPOTHESIS_ENGINE.md
ghostmirror/: __init__.py
ghostmirror-rs/: Cargo.toml
ghostmirror-rs/src/: banner_grabber.rs  http_fingerprint.rs  lib.rs  main.rs  models.rs  output.rs  port_scanner.rs
ghostmirror-rs/tests/: test_cli.rs  test_fingerprint.rs  test_models.rs  test_port_scanner.rs
labs/: docker-compose.dvwa.yml  docker-compose.juice-shop.yml  docker-compose.vuln-demo.yml  docker-compose.webgoat.yml
tests/: conftest.py  test_anomaly_engine.py  test_api_cli.py  test_api_discovery.py  test_api_edge_cases.py  test_api_engine.py  test_api_engine_integration.py  test_api_inventory.py  test_assistant_cli.py  test_assistant_context_loader.py  test_assistant_engine.py  test_assistant_hackerone_integration.py  test_assistant_models.py  test_assistant_next_steps.py  test_assistant_pipeline_integration.py  test_assistant_report_builder.py  test_assistant_safety.py  test_assistant_triage.py  (+133 more)
(+362 files in other folders)
