[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostmirror"
version = "1.0-alpha"
description = "GhostMirror — Internal Pentest Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - Internal Use Only" }
authors = [{ name = "GhostMirror Team" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ghostmirror = "ghostmirror.app.main:main"

[tool.setuptools.packages.find]
include = ["ghostmirror*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
