[package]
name = "ghostmirror-rs"
version = "0.1.0"
edition = "2021"
description = "GhostMirror Native Rust Engine — port scanner, banner grabber, HTTP fingerprint"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3"
